# IQArchiveManager

./: .gitignore  .gitmodules  IQArchiveManager.sln
IQArchiveManager.Client/: ClipDatabase.cs  EnviornmentPicker.Designer.cs  EnviornmentPicker.cs  GeneralUtils.cs  IQArchiveManager.Client.csproj  IQDirectories.cs  IQEnviornment.cs  MainEditor.Designer.cs  MainEditor.cs  MainMenu.Designer.cs  MainMenu.cs  Program.cs  RdsPatch.cs  RdsReader.cs  RdsValue.cs  packages.config
IQArchiveManager.Client/Components/: ClipGrid.Designer.cs  ClipGrid.cs  ClipGrid.resx  CorrectNoDelimiterForm.Designer.cs  CorrectNoDelimiterForm.cs  EditorTipsForm.Designer.cs  EditorTipsForm.cs  EditorTipsForm.resx  ExportStatsDialog.Designer.cs  ExportStatsDialog.cs  FolderListPicker.Designer.cs  FolderListPicker.cs  FolderListPickerItem.Designer.cs  FolderListPickerItem.cs  QuickTextBox.cs  RebuildDatabaseDialog.Designer.cs  RebuildDatabaseDialog.cs  RebuildDatabaseDialog.resx  ScrollableDialog.Designer.cs  ScrollableDialog.cs  StationBrandingsEditor.Designer.cs  StationBrandingsEditor.cs  TimeSpanChooser.Designer.cs  TimeSpanChooser.cs  TransportControls.Designer.cs  TransportControls.cs  (+2 more)
IQArchiveManager.Common/: Constants.cs  TrackClipInfo.cs  TrackEditInfo.cs
IQArchiveManager.Server/: ArchiveTask.cs  ArchiveWorkerThread.cs  BaseArchiveTaskScanStore.cs  IArchiveTask.cs  IArchiveTaskStore.cs  IQArchiveManager.Server.csproj  Program.cs
IQArchiveManager.Tests/: IQArchiveManager.Tests.csproj  RdsTests.cs
native/: CMakeLists.txt  CMakeSettings.json  api.cpp  api.h  mingw32.cmake  pre.cpp  pre.h
(+103 files in other folders)
